# distrox

./: .gitignore  .travis.yml  Cargo.toml  README.md  bors.toml  distrox.toml  flake.nix  shell.nix
.builds/: debian.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  commit-lint.yml  fmt.yml
assets/: index.html  index_pre.html  style.css
cli/: Cargo.toml
cli/src/: cli.rs  main.rs  profile.rs  watch.rs
cli/src/commands/: profile.rs
distrox-cli/: Cargo.toml
distrox-cli/src/: error.rs  main.rs
distrox-gui/: Cargo.toml  build.rs
distrox-gui/gui/: about.slint  connectbox.slint  gui.slint  input.slint  main.slint  my_profile.slint  page.slint  settings.slint  sidebar.slint
distrox-gui/gui/pages/: main.slint
distrox-gui/src/: lib.rs  main.rs
distrox-lib/: Cargo.toml
distrox-lib/src/: application.rs  command.rs  configuration.rs  error.rs  event.rs  lib.rs  network.rs  state.rs
distrox-types/: Cargo.toml
distrox-types/src/: id.rs  lib.rs  node.rs  post.rs  protocol.rs  util.rs
gui/: Cargo.toml
gui/frontend/: Cargo.toml  index.html
gui/frontend/public/: glue.js  main.css
gui/frontend/src/: app.rs  login.rs  main.rs  message.rs  tauri.rs
gui/frontend/src/view/: app.rs  mod.rs
gui/frontend/src/view/home/: menu.rs  mod.rs  post.rs  posts.rs  sidebar.rs
gui/src/: app.rs  cli.rs  gossip.rs  main.rs  post.rs  timeline.rs  timeline_post.rs
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: login.rs  main.rs
gui/src/app/: handler.rs  message.rs  mod.rs
gui/src/gui/: mod.rs
gui/types/: Cargo.toml
gui/types/src/: lib.rs  login.rs
lib/: Cargo.toml
lib/src/: backend.rs  cid.rs  client.rs  consts.rs  error.rs  lib.rs  low_level_client.rs  profile.rs  stream.rs
lib/src/backend/: ipfs_api.rs  mod.rs
lib/src/gossip/: deserializer.rs  handler.rs  mod.rs  msg.rs
lib/src/profile/: device.rs  mod.rs  state.rs
lib/src/reactor/: account.rs  ctrl.rs  device.rs  gossip.rs  mod.rs
lib/src/reactor/gossip/: ctrl.rs  mod.rs  strategy.rs
lib/src/types/: datetime.rs  mod.rs  node.rs  payload.rs
lib/tests/: broken.rs  profile.rs
lib/tests/images/: ipfs.rs
src/: app.rs  cid.rs  cli.rs  cli_ui.rs  client.rs  config.rs  configuration.rs  consts.rs  gui.rs  ipfs_client.rs  main.rs  middleware.rs  model.rs  profile.rs  server.rs  state.rs  version.rs
src/backend/: backend.rs  datetime.rs  id.rs  mime.rs  mod.rs  node.rs  payload.rs
src/commands/: mod.rs  profile.rs
src/gui/: mod.rs
src/profile/: mod.rs  state.rs
src/repository/: client.rs  iter.rs  mod.rs  profile.rs  repository.rs
src/repository/iter/: block.rs
src/typeext/: block.rs
src/types/: block.rs  content.rs  datetime.rs  encodable_cid.rs  id.rs  mime.rs  mod.rs  node.rs  payload.rs  util.rs
tests/: connect_test.rs  post_text_blob.rs
