[package]
name          = "distrox"
version       = "0.1.0"
authors       = ["Matthias Beyer <mail@beyermatthias.de>"]

description   = "Distributed network build on IPFS"

keywords      = ["social", "network", "ipfs", "distributed"]
readme        = "README.md"
license       = "GPL-2.0"

documentation = "https://docs.rs/distrox"
repository    = "https://github.com/matthiasbeyer/distrox"
homepage      = "http://github.com/matthiasbeyer/distrox"

edition       = "2018"

[dependencies]
# TODO: Replace with thiserror
anyhow           = "1"

async-trait      = "0.1"
cid              = "0.6"
chrono           = "0.4"
clap-v3          = "3.0.0-beta.1"
daglib           = { git = "https://git.sr.ht/~matthiasbeyer/daglib", branch = "master" }
ipfs-embed       = "0.19"
libipld          = "0.11"
libipld-cbor     = "0.11"
libp2p           = "0.36"
libp2p-bitswap   = "*"
libp2p-core      = "*"
libp2p-gossipsub = "*"
libp2p-ping      = "*"
mime             = "0.3"
tokio            = { version = "1", features = ["full"] }

