[package]
name          = "distrox"
version       = "0.1.0"
authors       = ["Matthias Beyer <mail@beyermatthias.de>"]

description   = "Distributed network build on IPFS"

keywords      = ["social", "network", "ipfs", "distributed"]
readme        = "README.md"
license       = "GPL-2.0"

documentation = "https://docs.rs/distrox"
repository    = "https://github.com/matthiasbeyer/distrox"
homepage      = "http://github.com/matthiasbeyer/distrox"

edition       = "2018"

[dependencies]
anyhow                 = "1"
async-trait            = "0.1"
chrono                 = "0.4"
cid                    = "0.7"
clap-v3                = "3.0.0-beta.1"
daglib                 = { git = "https://git.sr.ht/~matthiasbeyer/daglib", branch = "master" }
env_logger             = "0.8"
futures                = "0.3"
ipfs-api-backend-hyper = { version = "0.2", features = [ "with-hyper-tls" ] }
log                    = "0.4"
tokio                  = { version = "1", features = ["full", "rt", "macros"] }
mime                   = "0.3"
libipld-cbor           = "0.12"
libipld                = "0.12"
libp2p           = "*"
libp2p-bitswap   = "*"
libp2p-core      = "*"
libp2p-gossipsub = "*"
libp2p-ping      = "*"
rand_core        = { version = "0.6", features = ["getrandom"] }
rand_os          = "0.2"
ed25519-dalek    = "*"
http             = "0.2"
