[package]
name          = "distrox-cli"
version       = "0.1.0"
authors       = ["Matthias Beyer <mail@beyermatthias.de>"]

description   = "Distributed network build on IPFS, CLI frontend"

keywords      = ["social", "network", "ipfs", "distributed"]
readme        = "README.md"
license       = "GPL-2.0"

documentation = "https://docs.rs/distrox"
repository    = "https://github.com/matthiasbeyer/distrox"
homepage      = "http://github.com/matthiasbeyer/distrox"

edition       = "2018"

[dependencies]
anyhow        = "1"
async-trait   = "0.1"
chrono        = { version = "0.4", features = ["serde"] }
cid           = "0.5"
clap          = { version = "3", features = ["cargo"] }
daglib        = { git = "https://github.com/matthiasbeyer/daglib", branch = "master" }
env_logger    = "0.8"
futures       = "0.3"
log           = "0.4"
tokio         = { version = "1", features = ["full", "rt", "macros"] }
mime          = "0.3"
rand_core     = { version = "0.6", features = ["getrandom"] }
rand_os       = "0.2"
ed25519-dalek = "*"
http          = "0.2"
serde         = "1"
serde_json    = "1"
getset        = "0.1"
xdg           = "2.4"
tracing       = "0.1"
ctrlc         = "3.2"
editor-input  = "0.1.2"

[dependencies.ipfs]
git = "https://github.com/rs-ipfs/rust-ipfs/"
rev = "ad3ab49b4d9236363969b0f74f14aabc7c906b3b"

[dependencies.distrox-lib]
path = "../lib"

[dev-dependencies]
multibase = "0.8"
