[package]
name = "distrox-gui"
edition.workspace = true
version.workspace = true
license.workspace = true

build = "build.rs"

[lib]
name = "distrox_gui"
path = "src/lib.rs"

[[bin]]
name = "distrox-gui"
path = "src/main.rs"

[dependencies]
slint = "1.0"

thiserror.workspace = true

[build-dependencies]
slint-build = "1.0"
