[package]
name = "distrox-gui"
edition.workspace = true
version.workspace = true
license.workspace = true

build = "build.rs"

[lib]
name = "distrox_gui"
path = "src/lib.rs"

[[bin]]
name = "distrox-gui"
path = "src/main.rs"

[dependencies]
slint = "1.1"

thiserror.workspace = true

distrox-lib = { path = "../distrox-lib" }
tokio = { workspace = true, features = ["sync"] }
tracing-subscriber = { version = "0.3", features = [ "fmt", "std" ] }
tracing = "0.1"

[build-dependencies]
slint-build = "1.1"
