[package]
name = "distrox-lib"
edition.workspace = true
version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true

distrox-types = { version = "0.1.0", path = "../distrox-types" }

futures = "0.3.28"
libipld = "0.16"
rust-ipfs = "0.3.19"
void = "1"

[dependencies.libp2p]
version = "0.51.3"
default-features = false
features = [ "tokio", "identify", "ping", "floodsub", "gossipsub", "mdns", "kad" ]
