[package]
name = "distrox-lib"
edition.workspace = true
version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true

distrox-types = { version = "0.1.0", path = "../distrox-types" }

cid = "0.10"
futures = "0.3.28"
libipld = "0.16"
rust-ipfs = "0.3.19"
void = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }
toml = "0.7"
serde = "1"
tokio = { version = "1", features = ["fs", "macros"] }
xdg = "2.5"

[dependencies.libp2p]
version = "0.51.3"
default-features = false
features = [ "tokio", "identify", "ping", "floodsub", "gossipsub", "mdns", "kad" ]

[dependencies.libp2p-identity]
version = "0.2.0"
default-features = false
features = [ "peerid" ]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
env_logger = "0.10"
