[package]
name          = "distrox-lib"
version       = "0.1.0"
authors       = ["Matthias Beyer <mail@beyermatthias.de>"]

description   = "Distributed network build on IPFS"

keywords      = ["social", "network", "ipfs", "distributed"]
readme        = "README.md"
license       = "GPL-2.0"

documentation = "https://docs.rs/distrox"
repository    = "https://github.com/matthiasbeyer/distrox"
homepage      = "http://github.com/matthiasbeyer/distrox"

edition       = "2018"

[dependencies]
anyhow = "1" # only required because error handling in iroh is not implemented yet :-(
async-trait = "0.1"
cid = "0.9"
getset = "0.1"
libipld = "0.15"
libp2p = "0.50"
thiserror = "1"
time = { version = "0.3", features = ["parsing", "serde-human-readable"] }
tracing = "0.1"

[dependencies.iroh-rpc-client]
git = "https://github.com/n0-computer/iroh/"
rev = "35955d6b9b505d2c35f99e4c618293c70bcca1a7"
package = "iroh-rpc-client"
optional = true

[dependencies.iroh-rpc-types]
git = "https://github.com/n0-computer/iroh/"
rev = "35955d6b9b505d2c35f99e4c618293c70bcca1a7"
package = "iroh-rpc-types"
optional = true

[dependencies.ipfs-api]
version = "0.16"
optional = true

[features]
default = ["backend-ipfs-api"]
backend-ipfs-api = [ "ipfs-api" ]
backend-iroh = ["iroh-rpc-client", "iroh-rpc-types"]

