[package]
name          = "distrox-gui-frontend"
version       = "0.1.0"
authors       = ["Matthias Beyer <mail@beyermatthias.de>"]

description   = "Distributed network build on IPFS"

keywords      = ["social", "network", "ipfs", "distributed"]
readme        = "README.md"
license       = "GPL-2.0"

documentation = "https://docs.rs/distrox"
repository    = "https://github.com/matthiasbeyer/distrox"
homepage      = "http://github.com/matthiasbeyer/distrox"

edition       = "2021"

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.16.0"
wasm-bindgen = "0.2.78"
serde-wasm-bindgen = "0.4"
web-sys = "0.3.55"
wasm-bindgen-futures = "0.4.28"
js-sys = "0.3.55"
wasm-logger = "0.2"
log = "0.4"
thiserror = "1"

distrox-gui-types = { path = "../types" }
